<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nl.tudelft.abs.ffiorini</groupId>
  <artifactId>Arrow-Spark-Engine</artifactId>
  <version>1.0-SNAPSHOT</version>
  <inceptionYear>2008</inceptionYear>
  <properties>
    <!-- Highest version used by dependencies, although spark has conflicts in this...
       In particular: spark-network-common_2.12 requires 2.12.15, but
                      com.twitter:chill_2.12 requires 2.12.14 -->
    <java.version>1.8</java.version>
    <scala.version>2.12.15</scala.version>
     <arrow.version>6.0.0</arrow.version>
<!--    <arrow.version>7.0.0</arrow.version>-->
<!--    <arrow.version>5.0.0</arrow.version>-->
    <parquet.version>1.12.2</parquet.version>
<!--    <parquet.version>1.12.0</parquet.version>-->
    <spark.version>3.3.0-SNAPSHOT</spark.version>
<!--    <jackson.version>2.13.2</jackson.version>-->
    <jackson.version>2.10.0</jackson.version>
    <netty.version>4.1.74.Final</netty.version>
    <!-- <jackson.version>2.10.0</jackson.version> -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.release>8</maven.compiler.release>
  </properties>

  <repositories>
    <repository>
      <id>local-patches</id>
      <url>file://${project.basedir}/patcher</url>
    </repository>
    <repository>
      <id>spark-SNAPSHOTS</id>
      <name>remote spark repository for snapshots</name>
      <url>https://repository.apache.org/snapshots</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>nl.tudelft.abs.ffiorini</groupId>
      <artifactId>Arrow-Spark-Engine-Patch</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <!--  DIRECT DEPENDENCIES  -->
    <!--      Scala    -->
    <!-- test -->
    <!-- <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>${scala.version}</version>
    </dependency> -->
    <!--  Required  -->
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-reflect</artifactId>
      <version>${scala.version}</version>
    </dependency>
    <!--      Junit   -->
    <!-- test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
    <!-- scalatest -->
    <dependency>
      <groupId>org.scalatest</groupId>
      <artifactId>scalatest_2.12</artifactId>
      <version>3.3.0-SNAP3</version>
      <scope>test</scope>
    </dependency>
    <!-- scalatest junit 5 runner -->
    <dependency>
      <groupId>co.helmethair</groupId>
      <artifactId>scalatest-junit-runner</artifactId>
      <version>0.1.10</version>
      <scope>test</scope>
    </dependency>
    <!--    Specs   -->
    <!-- test -->
    <!-- <dependency>
      <groupId>org.specs</groupId>
      <artifactId>specs</artifactId>
      <version>1.4.3</version>
      <scope>test</scope>
    </dependency> -->
    <!--    Apache Spark: Required    -->
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_2.12</artifactId>
      <version>${spark.version}</version>
      <scope>compile</scope>
    </dependency>
    <!--    Apache Arrow    -->
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-vector</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-memory</artifactId>
      <version>${arrow.version}</version>
      <type>pom</type>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-memory-unsafe</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-memory-netty</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <!--    Required -->
    <dependency>
      <groupId>org.apache.arrow</groupId>
      <artifactId>arrow-algorithm</artifactId>
      <version>${arrow.version}</version>
    </dependency>
    <!--    Apache Parquet  -->
    <!-- test -->
    <dependency>
      <groupId>org.apache.parquet</groupId>
      <artifactId>parquet-common</artifactId>
      <version>${parquet.version}</version>
    </dependency>
    <!--    Required  -->
    <dependency>
      <groupId>org.apache.parquet</groupId>
      <artifactId>parquet-arrow</artifactId>
      <version>${parquet.version}</version>
    </dependency>
    <!-- test -->
    <!-- <dependency>
      <groupId>org.apache.parquet</groupId>
      <artifactId>parquet-column</artifactId>
      <version>${parquet.version}</version>
    </dependency> -->
    <!-- test -->
    <dependency>
      <groupId>org.apache.parquet</groupId>
      <artifactId>parquet-jackson</artifactId>
      <version>${parquet.version}</version>
    </dependency>
    <!--    Required  -->
    <dependency>
      <groupId>org.apache.parquet</groupId>
      <artifactId>parquet-hadoop</artifactId>
      <version>${parquet.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.parquet</groupId>
      <artifactId>parquet-avro</artifactId>
      <version>1.11.0</version>
    </dependency>
    <!--    FasterXML Jackson Core -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-scala_2.12</artifactId>
      <version>${jackson.version}</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.apache.maven.plugins</groupId>-->
<!--      <artifactId>maven-eclipse-plugin</artifactId>-->
<!--      <version>2.10</version>-->
<!--    </dependency>-->
    <!--  INDIRECT DEPENDENCIES - CONFLICT SOLVING -->
<!--    <dependency>-->
<!--      <groupId>com.google.code.findbugs</groupId>-->
<!--      <artifactId>jsr305</artifactId>-->
<!--      <version>3.0.2</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.xerial.snappy</groupId>-->
<!--      <artifactId>snappy-java</artifactId>-->
<!--      <version>1.1.8.4</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.apache.arrow</groupId>-->
<!--      <artifactId>arrow-format</artifactId>-->
<!--      <version>${arrow.version}</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>org.slf4j</groupId>-->
<!--      <artifactId>slf4j-api</artifactId>-->
<!--      <version>1.7.33</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>commons-codec</groupId>-->
<!--      <artifactId>commons-codec</artifactId>-->
<!--      <version>1.15</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
<!--      <artifactId>jackson-annotations</artifactId>-->
<!--      <version>${jackson.version}</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.fasterxml.jackson.core</groupId>-->
<!--      <artifactId>jackson-databind</artifactId>-->
<!--      <version>${jackson.version}</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>io.netty</groupId>-->
<!--      <artifactId>netty-common</artifactId>-->
<!--      <version>${netty.version}</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>io.netty</groupId>-->
<!--      <artifactId>netty-buffer</artifactId>-->
<!--      <version>${netty.version}</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.github.luben</groupId>-->
<!--      <artifactId>zstd-jni</artifactId>-->
<!--      <version>1.5.2-1</version>-->
<!--    </dependency>-->
  </dependencies>

  <!--  https://stackoverflow.com/questions/24448582/my-mixed-scala-java-maven-project-doesnt-compile-->
  <build>
    <plugins>
      <plugin>
        <!--    Plugin to build scala source files    -->
        <groupId>org.scala-tools</groupId>
        <artifactId>maven-scala-plugin</artifactId>
        <version>2.15.2</version>
        <executions>
          <execution>
            <id>compile</id>
            <goals>
              <goal>compile</goal>
            </goals>
            <phase>compile</phase>
          </execution>
          <execution>
            <id>test-compile</id>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <phase>test-compile</phase>
          </execution>
          <execution>
            <phase>process-resources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>8</source>
          <target>8</target>
        </configuration>
      </plugin>
      <plugin>
        <!--   Run Unit tests     -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
        <!--   Easy way to check dependency-conflicts     -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M3</version>
        <configuration>
          <rules>
            <dependencyConvergence />
          </rules>
        </configuration>
      </plugin>
      <plugin>
        <!--    Plugin to build sources-jar     -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!--    Plugin to build dependency jar     -->
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
<!--          <appendAssemblyId>false</appendAssemblyId>-->
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>

